--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-    
+
     - uses: actions/setup-node@v1
       with:
         node-version: '10.x'
@@ -31,14 +31,14 @@ jobs:
       run: |
         npm install -g webpack webpack-cli --save-dev
         npm install
-        npx webpack --config webpack.config.js
-    
+        npx webpack --config webpack.prod.config.js
+
     - uses: azure/appservice-settings@v1
       with:
         app-name: d90511
         general-settings-json: '{"linuxFxVersion": "NODE|10.10"}' #'General configuration settings as Key Value pairs'
 
-    # deploy web app 
+    # deploy web app
     - uses: azure/webapps-deploy@v1
       with:
         app-name: d90511
